# fastnomicon

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.py
python/: Cargo.toml  fastnomicon.pyi  pyproject.toml
python/src/: lib.rs  math.rs  timestring.rs
python/src-maturin/fastnomicon/: __init__.py  _fastnomicon.pyi
tests/: test_math.py  test_number_string.py
