[workspace]
resolver = "2"
members = [
    "library",
    "python",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MPL-2.0"
repository = "https://github.com/naoTimesdev/fastnomicon"
homepage = "https://naoti.me"
rust-version = "1.80.0"

[workspace.dependencies]
nom = "8.0.0"
shunting = "0.1.2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
