[package]
name = "fastnomicon-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A collection of utilities used by naoTimes bot"
readme = "../README.md"

[dependencies]
pyo3 = { version = "0.22.4", features = ["extension-module"] }

fastnomicon = { path = "../library" }

[lib]
name = "_fastnomicon"
crate-type = ["cdylib"]
