#:schema https://json.schemastore.org/pyproject.json

[project]
name = "fastnomicon"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
